Background scaling fix

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 							<p>
 								Institute for Tourism Studies
 								<br>
-								Macao SAR, China // 21-22 November, 2019
+								Macao SAR, China . 21-22 November 2019
 							</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
