Fixes and optimisations

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="icon" href="ift_favicon.ico" type="image/x-icon"/>
 	</head>
 	<body class="is-preload">
 
@@ -253,7 +254,7 @@
 							<p style="font-size: 0.7em;">Other images from Sharif Shams Imon.</p>
 						</div>
 						<div class="column-footer" style="text-align: right; vertical-align: top;">
-							<img src="images\IFT-logo-footer.png" alt="IFT_logo" id="resize-image">
+							<img src="images\IFT-logo.png" alt="IFT_logo" id="resize-image">
 						</div>
 					</div>
 				</div>
