--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@
 							<p style="font-size: 0.7em;"><a href="https://www.flickr.com/photos/oxborrow/148049777">Macau Tower</a> by <a href="https://www.flickr.com/photos/oxborrow/">Toby Oxborrow</a> is licensed under CC BY-SA 2.0 / Desaturated from original.</p>
 							<p style="font-size: 0.7em;">Other images from Sharif Shams Imon.</p>
 						</div>
-						<div class="column-footer" style="text-align: right; vertical-align: top;">
-							<img src="images\IFT-logo.png" alt="IFT_logo" id="resize-image">
+						<div class="column-footer" style="text-align: right; vertical-align: bottom;">
+							<img src="images\IFT-logo-footer.png" alt="IFT_logo">
 						</div>
 					</div>
 				</div>
