--- a/index.html
+++ b/index.html
@@ -238,9 +238,9 @@
 										<li>Suite (one queen bed with a separate living space) - MOP400 (~€44) per night</li>
 									</ul>
 							<p>Note: First-come-first-served. A limited number of rooms are available.</p>
-							<p>Furthermore there are many budget to 5-star accommodations options in Macao. Conference participants may book with them directly. More information on accommodation in Macao can be found at the <a href="http://en.macaotourism.gov.mo/plan/beforeyoutravel.php">Macao tourism department’s website</a>.</p>
+							<p>Furthermore there are many budget to 5-star accommodations options in Macao. Conference participants may book with them directly. More information on accommodation in Macao can be found at the <a href="https://www.macaotourism.gov.mo/en/accommodation">Macao tourism department’s website</a>.</p>
 							<h4>Arriving and Transportation</h4>
-							<p>Macao is easily accessible through Macao International Airport and ferries or buses from Hong Kong International Airport. Details of travel options, including entry requirements and local information, can be found at the <a href="http://en.macaotourism.gov.mo/plan/beforeyoutravel.php">Macao tourism department’s website</a>.</p>
+							<p>Macao is easily accessible through Macao International Airport and ferries or buses from Hong Kong International Airport. Details of travel options, including entry requirements and local information, can be found at the <a href="https://www.macaotourism.gov.mo/en/travelessential/before-you-travel/travelling-to-macao">Macao tourism department’s website</a>.</p>
 						</div>
 					</section>
 
