--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 							<p style="font-size: 0.7em;">Other images from Sharif Shams Imon.</p>
 						</div>
 						<div class="column-footer" style="text-align: right; vertical-align: bottom;">
-							<img src="images\IFT-logo-footer.png" alt="IFT_logo">
+							<img src="images\IFT-logo-footer.png" alt="IFT_logo" id="resize-image">
 						</div>
 					</div>
 				</div>
