New scrollbar, text fixes

--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<div class="row-table row">
+							<div class="row-table row" style="margin-top: 5em;">
 							  <div class="column-header">
-							    <img src="images\ATLAS_logo.png" alt="ATLAS_logo" style="width:100%">
+							    <img src="images\ATLAS_logo.png" alt="ATLAS_logo" style="width:100%;">
 							  </div>
 							  <div class="column-header">
-							    <img src="images\IFT-logo.png" alt="IFT_logo" style="width:100%">
+							    <img src="images\IFT-logo.png" alt="IFT_logo" style="width:100%; margin-left: 2em;">
 							  </div>
 							</div>
-							<h1>ATLAS SIG Meeting and Conference: Heritage Tourism and Education</h1>
+							<h1 style="margin-bottom: 0.5em; line-height: 1em;">ATLAS SIG Meeting and Conference: Heritage Tourism and Education</h1>
 							<h2 style="line-height: 1em;">Integrating Cultural and Natural Heritage in Urban Tourism: Innovations, Discourses and Collaborations</h2>
-							<p style="color: ">
+							<p style="color: rgba(255, 255, 255, 0.7);">
 								Institute for Tourism Studies
 								<br>
 								<span id="loc">Macao SAR, China . 21-22 November 2019</span>
@@ -97,7 +97,7 @@
 									<p>All abstracts will be subject to double-blind review by members of the scientific committee. Acceptance of a submission will be based on: theoretical and empirical significance; methodological soundness; relevance to the theme of the conference and logical clarity. The official language of the conference is English.
 										<br>
 										<br>
-									Abstracts should be submitted to ATLAS by using <a href="http://www.atlas-euro.org/event_2019_macao_abstract/tabid/325/language/en-US/Default.aspx">this form</a> before July 31st, 2019. Abstracts should have between 350-500 words. The title should be no more than 12 words. Authors should also indicate which conference topic their proposed paper relates to.</p>
+									Abstracts should be submitted to ATLAS by using <a href="http://www.atlas-euro.org/event_2019_macao_abstract/tabid/325/language/en-US/Default.aspx">this form</a> before the 10th of September, 2019. Abstracts should have between 350-500 words. The title should be no more than 12 words. Authors should also indicate which conference topic their proposed paper relates to.</p>
 								</div>
 							</div>
 						</section>
@@ -107,7 +107,7 @@
 								<div class="inner">
 									<h2>Important Dates</h2>
 									<ul>
-										<li>Abstract submission: 10 September 2019</li>
+										<li>Abstract submission deadline: 10 September 2019</li>
 										<li>Notification of acceptance: 15 September 2019</li>
 										<li>Full paper submission for inclusion in the conference proceedings: 20 October 2019</li>
 									</ul>
