--- a/index.html
+++ b/index.html
@@ -15,6 +15,30 @@
 	</head>
 	<body class="is-preload">
 
+		<!-- Hamburger menu -->
+
+		<div class="outer-menu">
+		  <input class="checkbox-toggle" type="checkbox" />
+		  <div class="hamburger">
+		    <div></div>
+		  </div>
+		  <div class="menu">
+		    <div>
+		      <div>
+		        <ul>
+		        	<li><a href="#intro">Home</a></li>
+					<li><a href="#one">Introduction</a></li>
+					<li><a href="#two">Papers</a></li>
+					<li><a href="#three">Programme</a></li>
+					<li><a href="#four">Registration</a></li>
+					<li><a href="#five">Venue</a></li>
+		        </ul>
+		      </div>
+		    </div>
+		  </div>
+		</div>
+
+
 		<!-- Sidebar -->
 			<section id="sidebar">
 				<div class="inner">
@@ -249,9 +273,9 @@
 				<div class="inner">
 					<div class="row-table" style="width: 100%; margin-top: -2em; display: flex;">
 						<div class="column-footer" style="vertical-align: bottom; display: table-cell;">
-							<p style="font-size: 0.7em;">Website Design Base: <a href="http://html5up.net">HTML5 UP</a></p>
 							<p style="font-size: 0.7em;"><a href="https://www.flickr.com/photos/oxborrow/148049777">Macau Tower</a> by <a href="https://www.flickr.com/photos/oxborrow/">Toby Oxborrow</a> is licensed under CC BY-SA 2.0 / Desaturated from original.</p>
 							<p style="font-size: 0.7em;">Other images from Sharif Shams Imon.</p>
+							<p style="font-size: 0.7em;">Website Design Base: <a href="http://html5up.net">HTML5 UP</a></p>
 						</div>
 						<div class="column-footer" style="text-align: right; vertical-align: bottom;">
 							<img src="images\IFT-logo-footer.png" alt="IFT_logo" id="resize-image">
