Hamburger menu fixes

--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
 		    <div></div>
 		  </div>
 		  <div class="menu">
-		    <div>
-		      <div>
+		    <div id="menu1">
+		      <div id="menu2">
 		        <ul>
 		        	<li><a href="#intro">Home</a></li>
 					<li><a href="#one">Introduction</a></li>
-					<li><a href="#two">Papers</a></li>
+					<li><a href="#two">Call For Papers</a></li>
 					<li><a href="#three">Programme</a></li>
 					<li><a href="#four">Registration</a></li>
-					<li><a href="#five">Venue</a></li>
+					<li><a href="#five">About The Venue</a></li>
 		        </ul>
 		      </div>
 		    </div>
