--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 							    <img src="images\ATLAS_logo.png" alt="ATLAS_logo" style="width:100%;">
 							  </div>
 							  <div class="column-header">
-							    <img src="images\IFT-logo.png" alt="IFT_logo" style="width:120%; margin-left: 2em;">
+							    <img src="images\IFT-logo.png" alt="IFT_logo" style="width:120%;">
 							  </div>
 							</div>
 							<h1 style="margin-bottom: 0.5em; line-height: 1em;">ATLAS SIG Meeting and Conference: Heritage Tourism and Education</h1>
